--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="modal"></div>
-    <div id="backdrop"></div>
+    <div id="portal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
